// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components : Charts: Annotation bubble renders correctly 1`] = `
<svg
  className="annotationBubbleSvg"
  fill="none"
  height="24"
  pointerEvents="bounding-box"
  style={
    Object {
      "cursor": "pointer",
    }
  }
  viewBox="0 0 20 24"
  width="20"
  x={0}
  xmlns="http://www.w3.org/2000/svg"
  y={0}
>
  <mask
    fill="white"
    id="path-1-inside-1"
  >
    <path
      clipRule="evenodd"
      d="M3 0C1.34315 0 0 1.34314 0 3V16.9412C0 18.5981 1.34315 19.9412 3 19.9412H6.17188L10.2426 24L14.3134 19.9412H17C18.6569 19.9412 20 18.5981 20 16.9412V3C20 1.34315 18.6569 0 17 0H3Z"
      fillRule="evenodd"
    />
  </mask>
  <rect
    className="annotationBubbleSvgFill"
    height="32"
    mask="url(#path-1-inside-1)"
    width="20"
    x="0"
    y="0"
  />
  <path
    d="M6.17188 19.9412L6.87794 19.2331L6.58523 18.9412H6.17188V19.9412ZM10.2426 24L9.53658 24.7081L10.2426 25.4121L10.9487 24.7081L10.2426 24ZM14.3134 19.9412V18.9412H13.9001L13.6073 19.2331L14.3134 19.9412ZM1 3C1 1.89543 1.89543 1 3 1V-1C0.790863 -1 -1 0.790856 -1 3H1ZM1 16.9412V3H-1V16.9412H1ZM3 18.9412C1.89543 18.9412 1 18.0458 1 16.9412H-1C-1 19.1503 0.790861 20.9412 3 20.9412V18.9412ZM6.17188 18.9412H3V20.9412H6.17188V18.9412ZM10.9487 23.2919L6.87794 19.2331L5.46581 20.6493L9.53658 24.7081L10.9487 23.2919ZM13.6073 19.2331L9.53658 23.2919L10.9487 24.7081L15.0195 20.6493L13.6073 19.2331ZM17 18.9412H14.3134V20.9412H17V18.9412ZM19 16.9412C19 18.0458 18.1046 18.9412 17 18.9412V20.9412C19.2091 20.9412 21 19.1503 21 16.9412H19ZM19 3V16.9412H21V3H19ZM17 1C18.1046 1 19 1.89543 19 3H21C21 0.790861 19.2091 -1 17 -1V1ZM3 1H17V-1H3V1Z"
    fill="black"
    mask="url(#path-1-inside-1)"
  />
  <text
    fill="black"
    style={
      Object {
        "fontSize": 13,
        "fontWeight": 700,
      }
    }
    textAnchor="middle"
    x="9.5"
    y="15"
  >
    A
  </text>
</svg>
`;

exports[`Components : Charts: Bar chart renders correctly 1`] = `
<svg
  aria-hidden={true}
  className="chart chart"
  onBlur={[Function]}
  onKeyDown={[Function]}
  tabIndex="0"
  viewBox="0 0 200 200"
>
  <g
    transform="translate(30 30)"
  >
    <text
      className="label directions"
    >
      Use arrows to move, Escape to leave.
    </text>
  </g>
  <g
    transform="translate(30 30)"
  >
    <g>
      <svg
        className="yTickLabel"
        x="-10"
        y={146}
      >
        <text
          className="label"
        >
          0
        </text>
      </svg>
      <line
        className="gridLine"
        x1={0}
        x2={140}
        y1={140}
        y2={140}
      />
    </g>
    <g>
      <svg
        className="yTickLabel"
        x="-10"
        y={92.15384615384616}
      >
        <text
          className="label"
        >
          500
        </text>
      </svg>
      <line
        className="gridLine"
        x1={0}
        x2={140}
        y1={86.15384615384616}
        y2={86.15384615384616}
      />
    </g>
    <g>
      <svg
        className="yTickLabel"
        x="-10"
        y={38.3076923076923}
      >
        <text
          className="label"
        >
          1,000
        </text>
      </svg>
      <line
        className="gridLine"
        x1={0}
        x2={140}
        y1={32.3076923076923}
        y2={32.3076923076923}
      />
    </g>
  </g>
  <g
    transform="translate(0, 170)"
  />
  <mask
    id="dataMask"
  >
    <rect
      fill="white"
      height={140}
      width={170}
      x="0"
      y="0"
    />
  </mask>
  <g
    mask="url(#dataMask)"
    transform="translate(0 30)"
  >
    <rect
      className=""
      fill="#333"
      fillOpacity={0.8}
      height={132.8923076923077}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      width={59.99999999999999}
      x={36.66666666666668}
      y={7.107692307692311}
    />
    <rect
      className=""
      fill="#333"
      fillOpacity={0.8}
      height={13.246153846153845}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      width={59.99999999999999}
      x={103.33333333333334}
      y={126.75384615384615}
    />
    <rect
      className=""
      fill="#333"
      fillOpacity={0.8}
      height={132.7846153846154}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      width={59.99999999999999}
      x={36.66666666666668}
      y={7.215384615384615}
    />
    <rect
      className=""
      fill="#333"
      fillOpacity={0.8}
      height={14.215384615384622}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      width={59.99999999999999}
      x={103.33333333333334}
      y={125.78461538461538}
    />
  </g>
  <g
    transform="translate(0 30)"
  />
</svg>
`;

exports[`Components : Charts: Bar chart renders correctly 2`] = `
<svg
  aria-hidden={true}
  className="chart chart"
  onBlur={[Function]}
  onKeyDown={[Function]}
  tabIndex="0"
  viewBox="0 0 200 200"
>
  <g
    transform="translate(30 30)"
  >
    <text
      className="label directions"
    >
      Use arrows to move, Escape to leave.
    </text>
  </g>
  <g
    transform="translate(30 30)"
  >
    <g>
      <svg
        className="yTickLabel"
        x="-10"
        y={146}
      >
        <text
          className="label"
        >
          0
        </text>
      </svg>
      <line
        className="gridLine"
        x1={0}
        x2={140}
        y1={140}
        y2={140}
      />
    </g>
    <g>
      <svg
        className="yTickLabel"
        x="-10"
        y={92.15384615384616}
      >
        <text
          className="label"
        >
          500
        </text>
      </svg>
      <line
        className="gridLine"
        x1={0}
        x2={140}
        y1={86.15384615384616}
        y2={86.15384615384616}
      />
    </g>
    <g>
      <svg
        className="yTickLabel"
        x="-10"
        y={38.3076923076923}
      >
        <text
          className="label"
        >
          1,000
        </text>
      </svg>
      <line
        className="gridLine"
        x1={0}
        x2={140}
        y1={32.3076923076923}
        y2={32.3076923076923}
      />
    </g>
  </g>
  <g
    transform="translate(0, 170)"
  >
    <text
      className="label xTickLabel"
      x={59.16666666666667}
      y="20"
    >
      Mar  4
    </text>
    <line
      className="label"
      stroke="colorSlate500"
      x1={59.16666666666667}
      x2={59.16666666666667}
      y1="0"
      y2="5"
    />
  </g>
  <mask
    id="dataMask"
  >
    <rect
      fill="white"
      height={140}
      width={170}
      x="0"
      y="0"
    />
  </mask>
  <g
    mask="url(#dataMask)"
    transform="translate(0 30)"
  >
    <rect
      className=""
      fill="#333"
      fillOpacity={0.8}
      height={132.8923076923077}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      width={59.99999999999999}
      x={36.66666666666668}
      y={7.107692307692311}
    />
    <rect
      className=""
      fill="#333"
      fillOpacity={0.8}
      height={13.246153846153845}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      width={59.99999999999999}
      x={103.33333333333334}
      y={126.75384615384615}
    />
    <rect
      className=""
      fill="#333"
      fillOpacity={0.8}
      height={132.7846153846154}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      width={59.99999999999999}
      x={36.66666666666668}
      y={7.215384615384615}
    />
    <rect
      className=""
      fill="#333"
      fillOpacity={0.8}
      height={14.215384615384622}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      width={59.99999999999999}
      x={103.33333333333334}
      y={125.78461538461538}
    />
  </g>
  <g
    transform="translate(0 30)"
  />
</svg>
`;
